Check if sidemap works

--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -15,7 +15,7 @@ layout: default
 
 </article>
 </div>
-{% include sidebar.html %}
+{% include sidemap.html %}
 </div>
 
 {% include fb-script.html %}
