--- a/_includes/sidemap.html
+++ b/_includes/sidemap.html
@@ -1,30 +1,12 @@
 <div class="col-md-4 mt20">
         <div class="post-img">
-           {% if page.img %}
-            <img width="600" src="{{site.baseurl}}/images/{{page.img}}" alt="{{page.title}}">
-            {% else %}
-            <img width="600" src="{{site.baseurl}}/images/{{site.default-image}}" alt="webjeda">
-            {% endif %}
+           <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=1.2038183212280273%2C52.60732180965478%2C1.2604665756225586%2C52.634469355528964&amp;layer=mapnik" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/#map=15/52.6209/1.2321">View Larger Map</a></small>
         </div>
 
 
         <div class="mt10 recent">
             <h2>Map</h2>
-             <ul>
-                {% for post in site.related_posts limit:3 %}
-
-                      <li>
-                      <p><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a><small>&nbsp;&nbsp;{{ post.date | date_to_string }}</small></p>
-                      </li>
-
-                {% endfor %}
-              </ul>
         </div>
-        {% if site.fb-like-box %}
-        <div class="mt10">
-            <div class="fb-page" data-href="https://www.facebook.com/webjeda/" data-width="400" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true"><blockquote cite="https://www.facebook.com/webjeda/" class="fb-xfbml-parse-ignore"><a href="{{site.fb-page-url}}">{{site.fb-page-title}}</a></blockquote></div>
-        </div>
-        {% endif %}
         <br>
 
 </div>
