--- a/_includes/sidemap.html
+++ b/_includes/sidemap.html
@@ -1,12 +1,6 @@
 <div class="col-md-4 mt20">
         <div class="post-img">
-           <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=1.2038183212280273%2C52.60732180965478%2C1.2604665756225586%2C52.634469355528964&amp;layer=mapnik" style="border: 1px solid black"></iframe><br/><small><a href="https://www.openstreetmap.org/#map=15/52.6209/1.2321">View Larger Map</a></small>
+           <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=1.2173%2C52.6131%2C1.2577%2C52.6287&amp;layer=mapnik" style="border: 1px solid black"></iframe>
+           <br/><small><a href="https://www.openstreetmap.org/#map=15/52.6209/1.2321">View larger map</a></small>
         </div>
-
-
-        <div class="mt10 recent">
-            <h2>Map</h2>
-        </div>
-        <br>
-
 </div>
