add back button

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,3 +32,5 @@ layout: page
   This Article is <b>open source</b>. Noticed a typo? </br>
   Or something unclear? Improve it on {% github_edit_link "GitHub" %}.
 </footer>-->
+
+{% include button.html link="/blog" text="Back to blog" %}
