centre the back button

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,4 +33,6 @@ layout: page
   Or something unclear? Improve it on {% github_edit_link "GitHub" %}.
 </footer>-->
 
+<p class="text-center">
 {% include button.html link="/blog" text="Back to blog" %}
+</p>
