--- a/_includes/software.html
+++ b/_includes/software.html
@@ -2,7 +2,7 @@ Test text
 
 <div class="card-columns m-3 mt-5">
 
-  {% for project in site.projects %}
+  {% for project in site.software %}
 
     {% comment %} Determine Project URL {% endcomment %}
     {% if project.external_url %}
