--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,5 +6,6 @@ $warning:   #ffc107;
 $danger:    #dc3545;
 $light:     #f8f9fa;
 $dark:      #343a40;
+$orange:    #ff8c00;
 
 $rounded-borders: 15px;
