--- a/_sass/_timeline.scss
+++ b/_sass/_timeline.scss
@@ -3,7 +3,7 @@
 	background-color: $light;
 	border-radius: 0 $rounded-borders $rounded-borders 0;
     padding: 5px 0;
-    
+
 	&:after {
         // Left Border
 		content: '';
@@ -14,26 +14,26 @@
 		left: -4px;
 		top: 0;
     }
-    
+
 	.timeline-item {
         position: relative;
-        
+
 		&:after {
             // Circle
 			content: '';
 			width: 20px;
 			height: 20px;
 			border-radius: 50%;
-			border: 4px solid $primary;
+			border: 4px solid $orange;
 			background-color: $light;
 			position: absolute;
 			left: -12px;
 			top: 8px;
 			z-index: 10;
         }
-        
+
 		.content {
-			margin: 40px; 
+			margin: 40px;
 			padding-bottom: 20px;
             border-bottom: 1px dashed $dark;
 
