try more orange

--- a/_sass/_timeline.scss
+++ b/_sass/_timeline.scss
@@ -9,7 +9,7 @@
 		content: '';
 		width: 4px;
 		height: 100%;
-		background-color: $primary;
+		background-color: $orange;
 		position: absolute;
 		left: -4px;
 		top: 0;
