Try orange primary

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,4 +1,5 @@
-$primary:   #007bff;
+// $primary:   #007bff;
+$primary:   #ff8c00;
 $secondary: #6c757d;
 $success:   #28a745;
 $info:      #17a2b8;
