--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,4 @@
-// $primary:   #007bff;
-$primary:   #ff8c00;
+$primary:   #007bff;
 $secondary: #6c757d;
 $success:   #28a745;
 $info:      #17a2b8;
@@ -7,6 +6,6 @@ $warning:   #ffc107;
 $danger:    #dc3545;
 $light:     #f8f9fa;
 $dark:      #343a40;
-$orange:    #ff8c00;
+// $orange:    #ff8c00;
 
 $rounded-borders: 15px;
