--- a/_sass/_timeline.scss
+++ b/_sass/_timeline.scss
@@ -9,7 +9,7 @@
 		content: '';
 		width: 4px;
 		height: 100%;
-		background-color: $orange;
+		background-color: $primary;
 		position: absolute;
 		left: -4px;
 		top: 0;
@@ -24,7 +24,7 @@
 			width: 20px;
 			height: 20px;
 			border-radius: 50%;
-			border: 4px solid $orange;
+			border: 4px solid $primary;
 			background-color: $light;
 			position: absolute;
 			left: -12px;
