--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -17,11 +17,11 @@
         <div class="card-body">
           <h5 class="card-title">{{ project.name }}</h5>
           <p class="card-text">{{ project.description }}</p>
-          <p class="card-text">
+          <!--<p class="card-text">
             {% for tool in project.tools %}
               <span class="badge badge-pill text-primary border border-primary">{{tool}}</span>
             {% endfor %}
-          </p>
+          </p>-->
         </div>
       </a>
     </div>
