--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -17,13 +17,13 @@
         <div class="card-body">
           <h5 class="card-title">{{ project.name }}</h5>
           <p class="card-text">{{ project.description }}</p>
-          {% if project.tools %}
+          <!--{% if project.tools %}
           <p class="card-text">
             {% for tool in project.tools %}
               <span class="badge badge-pill text-primary border border-primary">{{tool}}</span>
             {% endfor %}
           </p>
-          {% endif %}
+          {% endif %}-->
         </div>
       </a>
     </div>
