Try no animated fade in

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -9,7 +9,8 @@
       {% assign project_url = project.url | relative_url %}
     {% endif %}
 
-    <div class="wow animated fadeIn" data-wow-delay=".15s">
+    <!--<div class="wow animated fadeIn" data-wow-delay=".15s">-->
+    <div>
       <a href="{{ project_url }}" class="project card text-dark">
         {% if project.image %}
           <img class="card-img-top" src="{{ project.image }}" alt="Card image cap">
