--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <footer class="mt-auto py-3 text-center">
 
-  <small class="text-muted mb-2">
+  <!--<small class="text-muted mb-2">
     <i class="fas fa-code"></i> with <i class="fas fa-heart"></i>
     by <strong>{{ site.author.name }}</strong>
-  </small>
+  </small>-->
 
   {% include social.html %}
 
