Try light background on blockquote

--- a/_sass/_articles.scss
+++ b/_sass/_articles.scss
@@ -7,7 +7,7 @@
     text-decoration: none!important;
     padding: 15px;
     height: 100%;
-    
+
     .card-footer {
         font-size: 14px;
         margin: 0 -15px -15px -15px;
@@ -32,7 +32,7 @@
         margin-right: 2em;
     }
 
-    
+
     h1, h2 { margin-top: 32px; }
 
     hr { background: $secondary; }
@@ -40,7 +40,7 @@
     img {
         display: block;
         max-width: 100%;
-        height: auto;    
+        height: auto;
         margin: 1rem auto;
     }
 
@@ -100,11 +100,12 @@
     }
 
     blockquote {
+        background: $light;
         border-left: .25em solid $primary;
         color: $secondary;
         padding: 0 1em;
     }
-      
+
     table {
         display: block;
         overflow-x: auto;
