--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -1,10 +1,10 @@
 <div class="col-lg">
   <h2 class="mb-3">{{ include.title }}</h2>
-    {% for skill in include.source %}
-      <div class="skill">
-        <p>{{ skill.name }}</p>
-        <div class="skill-bar skill-bar-{{ skill.color }} skill-{{ skill.percentage }} wow animated slideInLeft" data-wow-delay="{{ forloop.index | divided_by: 20.0 }}">
-          <span>{{ skill.percentage }}</span>
+    {% for pubs in include.source %}
+      <div class="pubs">
+        <p>{{ pubs.name }}</p>
+        <div class="pubs-bar pubs-bar-{{ pubs.color }} skill-{{ pubs.percentage }} wow animated slideInLeft" data-wow-delay="{{ forloop.index | divided_by: 20.0 }}">
+          <span>{{ pubs.percentage }}</span>
         </div>
       </div>
     {% endfor %}
