--- a/_sass/_pubs.scss
+++ b/_sass/_pubs.scss
@@ -46,6 +46,8 @@
 .pubs-bar.pubs-bar-light { background: $light; }
 .pubs-bar.pubs-bar-dark { background: $dark; }
 
-@for $i from 0 through 10 {
-    .pubs-#{$i} { width: percentage($i/10); }
+.pubs-bar.pubs-bar-2019 { background: #f90; }
+
+@for $i from 0 through 100 {
+    .pubs-#{$i} { width: percentage($i/100); }
 }
