--- a/_sass/_pubs.scss
+++ b/_sass/_pubs.scss
@@ -46,8 +46,12 @@
 .pubs-bar.pubs-bar-light { background: $light; }
 .pubs-bar.pubs-bar-dark { background: $dark; }
 
-.pubs-bar.pubs-bar-2019 { background: #f90; }
+.pubs-bar.pubs-bar-2019 { background: #FDE725; }
+.pubs-bar.pubs-bar-2018 { background: #7AD151; }
+.pubs-bar.pubs-bar-2017 { background: #22A884; }
+.pubs-bar.pubs-bar-2016 { background: #2A788E; }
+.pubs-bar.pubs-bar-2015 { background: #414487; }
 
 @for $i from 0 through 10 {
-    .pubs-#{$i} { width: percentage($i/10); }
+    .pubs-#{$i} { width: percentage(($i+1)/11); }
 }
