--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -2,8 +2,8 @@
   <h2 class="mb-3">{{ include.title }}</h2>
     {% for pubs in include.source %}
       <div class="pubs">
-        <p>{{ pubs.name }}</p>
-        <div class="pubs-bar pubs-bar-{{ pubs.name }} pubs-{{ pubs.percentage }} wow animated slideInLeft" data-wow-delay="{{ forloop.index | divided_by: 20.0 }}">
+        <p>{{ pubs.year }}</p>
+        <div class="pubs-bar pubs-bar-{{ pubs.year }} pubs-{{ pubs.number }} wow animated slideInLeft" data-wow-delay="{{ forloop.index | divided_by: 20.0 }}">
           <span>{{ pubs.percentage }}</span>
         </div>
       </div>
