--- a/_sass/_pubs.scss
+++ b/_sass/_pubs.scss
@@ -36,6 +36,10 @@
         font-weight: 500;
         right: 0;
     }
+
+    span.below{
+        top: 30px;
+    }
 }
 
 .pubs-bar.pubs-bar-2019 { background: #FDE725; }
