--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -4,10 +4,10 @@
       <div class="pubs">
         <p>{{ pubs.year }}</p>
         <div class="pubs-bar pubs-bar-{{ pubs.year }} pubs-{{ pubs.number }} wow animated slideInLeft" data-wow-delay="{{ forloop.index | divided_by: 20.0 }}">
-          <span>{{ pubs.number }}</span>
+          <span>{{ pubs.number }} total</span>
         </div>
         <div class="pubs-bar pubs-bar-{{ pubs.year }} pubs-{{ pubs.lead }} wow animated slideInLeft" data-wow-delay="{{ forloop.index | divided_by: 20.0 }}">
-          <span>{{ pubs.lead }}</span>
+          <span class="below">{{ pubs.lead }} as a lead author</span>
         </div>
       </div>
     {% endfor %}
