--- a/_sass/_pubs.scss
+++ b/_sass/_pubs.scss
@@ -1,12 +1,29 @@
-.pubs {
-    margin-bottom: 35px;
+.pubs1 {
+    margin-bottom: 5px;
     position: relative;
     overflow: hidden;
 
     > p {
         margin: 0;
         font-size: 18px;
+        font-weight: bold;
     }
+
+    &:before{
+        width: 100%;
+        height: 5px;
+        content: "";
+        display: block;
+        position: absolute;
+        background: $light;
+        bottom: 0;
+    }
+}
+
+.pubs2 {
+    margin-bottom: 35px;
+    position: relative;
+    overflow: hidden;
 
     &:before{
         width: 100%;
