--- a/_sass/_pubs.scss
+++ b/_sass/_pubs.scss
@@ -1,5 +1,5 @@
-.pubs1 {
-    margin-bottom: 5px;
+.pubs {
+    margin-bottom: 35px;
     position: relative;
     overflow: hidden;
 
@@ -8,22 +8,6 @@
         font-size: 18px;
         font-weight: bold;
     }
-
-    &:before{
-        width: 100%;
-        height: 5px;
-        content: "";
-        display: block;
-        position: absolute;
-        background: $light;
-        bottom: 0;
-    }
-}
-
-.pubs2 {
-    margin-bottom: 35px;
-    position: relative;
-    overflow: hidden;
 
     &:before{
         width: 100%;
