Try vertical align

--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -7,7 +7,7 @@
           <span>{{ pubs.number }} total</span>
         </div>
         <div class="pubs-bar pubs-bar-{{ pubs.year }} pubs-{{ pubs.lead }} wow animated slideInLeft" data-wow-delay="{{ forloop.index | divided_by: 20.0 }}">
-          <span>{{ pubs.lead }} as a lead author</span>
+          <span>{{ pubs.lead }} as a lead</span>
         </div>
       </div>
     {% endfor %}
