--- a/_sass/_pubs.scss
+++ b/_sass/_pubs.scss
@@ -6,6 +6,7 @@
     > p {
         margin: 0;
         font-size: 18px;
+        font-weight: bold;
     }
 
     &:before{
@@ -29,13 +30,12 @@
     span{
         position: absolute;
         border-top: 5px solid inherit;
-        top: -30px;
+        top: 35px;
         padding: 0;
         font-size: 18px;
         padding: 3px 0;
         font-weight: 500;
         right: 0;
-        vertical-align: text-top;
     }
 }
 
