--- a/_sass/_pubs.scss
+++ b/_sass/_pubs.scss
@@ -11,7 +11,7 @@
 
     &:before{
         width: 100%;
-        height: 5px;
+        height: 10px;
         content: "";
         display: block;
         position: absolute;
@@ -30,12 +30,16 @@
     span{
         position: absolute;
         border-top: 5px solid inherit;
-        top: 35px;
+        top: -30px;
         padding: 0;
         font-size: 18px;
         padding: 3px 0;
         font-weight: 500;
         right: 0;
+    }
+
+    .below{
+        color: #f00;
     }
 }
 
