--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -4,11 +4,11 @@
       <div class="pubs">
         <p>{{ pubs.year }}</p>
         <div class="pubs-bar pubs-bar-{{ pubs.year }} pubs-{{ pubs.number }} wow animated slideInLeft" data-wow-delay="{{ forloop.index | divided_by: 20.0 }}">
-          <span>total {{ pubs.number }}</span>
+          <span>{{ pubs.number }}</span>
         </div>
-        <div class="pubs-bar pubs-bar-{{ pubs.year }} pubs-{{ pubs.lead }} wow animated slideInLeft" data-wow-delay="{{ forloop.index | divided_by: 20.0 }}">
+        <!--<div class="pubs-bar pubs-bar-{{ pubs.year }} pubs-{{ pubs.lead }} wow animated slideInLeft" data-wow-delay="{{ forloop.index | divided_by: 20.0 }}">
           <span class="below">lead {{ pubs.lead }}</span>
-        </div>
+        </div>-->
       </div>
     {% endfor %}
 </div>
