--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -2,9 +2,11 @@
   <!--<h2 class="mb-3">{{ include.title }}</h2>-->
     {% for pubs in include.source %}
       <div class="pubs">
-        <p>{{ pubs.year }}</p>
-        <div class="pubs-bar pubs-bar-{{ pubs.year }} pubs-{{ pubs.number }} wow animated slideInLeft" data-wow-delay="{{ forloop.index | divided_by: 20.0 }}">
-          <span>{{ pubs.number }}</span>
+        <div style="display:flex; flex-direction: row">
+          <p>{{ pubs.year }}</p>
+          <div class="pubs-bar pubs-bar-{{ pubs.year }} pubs-{{ pubs.number }} wow animated slideInLeft" data-wow-delay="{{ forloop.index | divided_by: 20.0 }}">
+            <span>{{ pubs.number }}</span>
+          </div>
         </div>
         <!--<div class="pubs-bar pubs-bar-{{ pubs.year }} pubs-{{ pubs.lead }} wow animated slideInLeft" data-wow-delay="{{ forloop.index | divided_by: 20.0 }}">
           <span class="below">lead {{ pubs.lead }}</span>
