--- a/_includes/pubs.html
+++ b/_includes/pubs.html
@@ -1,8 +1,10 @@
 <div class="col-lg">
   <!--<h2 class="mb-3">{{ include.title }}</h2>-->
     {% for pubs in include.source %}
+    <div style="display:flex">
+      <p>{{ pubs.year }}</p>
       <div class="pubs">
-        <p>{{ pubs.year }}</p>
+        <!--<p>{{ pubs.year }}</p>-->
         <div class="pubs-bar pubs-bar-{{ pubs.year }} pubs-{{ pubs.number }} wow animated slideInLeft" data-wow-delay="{{ forloop.index | divided_by: 20.0 }}">
           <span>{{ pubs.number }}</span>
         </div>
@@ -10,5 +12,6 @@
           <span class="below">lead {{ pubs.lead }}</span>
         </div>-->
       </div>
+    </div>
     {% endfor %}
 </div>
