--- a/_sass/_pubs.scss
+++ b/_sass/_pubs.scss
@@ -44,6 +44,7 @@
     }
 }
 
+.pubs-bar.pubs-bar-2020 { background: #FDE725; }
 .pubs-bar.pubs-bar-2019 { background: #FDE725; }
 .pubs-bar.pubs-bar-2018 { background: #7AD151; }
 .pubs-bar.pubs-bar-2017 { background: #22A884; }
