--- a/_sass/_pubs.scss
+++ b/_sass/_pubs.scss
@@ -35,7 +35,7 @@
         font-size: 18px;
         padding: 3px 0;
         font-weight: 500;
-        right: 0;
+        right: 5px;
     }
 
     .below{
