--- a/_sass/_pubs.scss
+++ b/_sass/_pubs.scss
@@ -35,7 +35,7 @@
         font-size: 18px;
         padding: 3px 0;
         font-weight: 500;
-        right: 5px;
+        right: 15px;
     }
 
     .below{
@@ -44,12 +44,12 @@
     }
 }
 
-.pubs-bar.pubs-bar-2020 { background: #FDE725; }
-.pubs-bar.pubs-bar-2019 { background: #FDE725; }
-.pubs-bar.pubs-bar-2018 { background: #7AD151; }
-.pubs-bar.pubs-bar-2017 { background: #22A884; }
-.pubs-bar.pubs-bar-2016 { background: #2A788E; }
-.pubs-bar.pubs-bar-2015 { background: #414487; }
+.pubs-bar.pubs-bar-2020 { background: #fde725; }
+.pubs-bar.pubs-bar-2019 { background: #8fd744; }
+.pubs-bar.pubs-bar-2018 { background: #35b779; }
+.pubs-bar.pubs-bar-2017 { background: #21908c; }
+.pubs-bar.pubs-bar-2016 { background: #31688e; }
+.pubs-bar.pubs-bar-2015 { background: #443a83; }
 
 @for $i from 0 through 9 {
     .pubs-#{$i} { width: percentage(($i+0.5)/9.5); }
