--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,5 +1,6 @@
 body {
-    font-family: 'Poppins', sans-serif;
+    //background-color: #0b223c;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 .badge {
