--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -112,6 +112,7 @@
   }
 
   blockquote {
+    background: $light;
     border-left: 0.25em solid $primary;
     color: $secondary;
     padding: 0 1em;
