--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -114,8 +114,8 @@
   blockquote {
     background: $light;
     border-left: 0.25em solid $primary;
-    color: $secondary;
-    padding: 0 1em;
+    color: $dark;
+    padding: 0.5em 1em;
   }
 
   table {
