Update 2019 pubs style

--- a/original/_sass/_base.scss
+++ b/original/_sass/_base.scss
@@ -1,6 +1,6 @@
 body {
     //background-color: #0b223c;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .badge {
