--- a/_sass/portfolYOU.scss
+++ b/_sass/portfolYOU.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 // Custom Fonts
-@import url('https://fonts.googleapis.com/css?family=Ubuntu');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import "variables",
